tests/api/reference/negative/10-len-scalar.asm
const invalid: u64 = len(1)
